fixed management title getting covered by featured projects panel

--- a/src/component/LandingPageV2/Management/style.css
+++ b/src/component/LandingPageV2/Management/style.css
@@ -167,6 +167,8 @@
     margin: 0vw;
     padding: 2.3vw;
     background: white;
+    margin-left: -10vh;
+    margin-right: 5vh;
   }
 
   
